Fix PostgresSQL table issues